WP-8458 fixes to the interaction of the megamenu. alignment of the search box and open close boxes.

--- a/fonts/icons/_icons.scss
+++ b/fonts/icons/_icons.scss
@@ -15,6 +15,7 @@ $icons: (
     calendar-blank: "\f109",
     calendar-day: "\f10a",
     chat: "\f10b",
+    chevron-light-right: "\f054",
     circle: "\f10c",
     circle-arrow-left: "\f10d",
     circle-arrow-right: "\f10e",
